# peewee-aio

./: .bumpversion.cfg  .git-commits.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  check_types.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  tests.yml
peewee_aio/: __init__.py  databases.py  fields.py  manager.py  model.py  tools.py  types.py  utils.py
requirements/: requirements-tests.txt  requirements.txt
tests/: conftest.py  models.py  test_base.py  test_examples.py  test_fields.py  test_model.py  test_modify.py  test_pw_sync.py  test_replicas.py  test_select.py  test_sqlite.py  test_tools.py  test_triopg.py  test_utils.py
tests/assets/: init-postgres.sql
tests/test_manager/: test_base.py  test_modify.py  test_select.py
tests/test_model/: conftest.py  test_base.py  test_modify.py  test_select.py
