[project]
name = "peewee-aio"
version = "2.2.4"
description = "Async support for Peewee ORM"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = ["peewee", "asyncio", "trio", "orm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
dependencies = [
  "peewee>=3,<4",
  "aio-databases",
  "typing-extensions ; python_full_version < '3.11'",
]

[project.optional-dependencies]
asyncpg = ["asyncpg"]
aiopg = ["aiopg"]
aiomysql = ["aiomysql"]
aiosqlite = ["aiosqlite"]
trio_mysql = ["trio_mysql"]

[project.urls]
Homepage = "https://github.com/klen/peewee-aio"
Repository = "https://github.com/klen/peewee-aio"

[dependency-groups]
dev = [
  "pytest",
  "pyrefly",
  "pytest-aio[trio]",
  "trio_asyncio",
  "aio-databases[aiopg, aiomysql, aiosqlite, asyncpg, trio_mysql]",
  "ruff",
  "pre-commit",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["peewee_aio"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-xsv"
log_cli = true

[tool.pyrefly]
project-includes = ["peewee_aio/*.py"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313,py314
isolated_buiid = true

[testenv]
allowlist_externals = poetry
skip_install = true
commands_pre =
    poetry install
deps = -e .[dev]
commands =
    poetry run pytest tests --import-mode importlib
"""

[tool.ruff]
include = ["peewee_aio/*.py"]
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ARG",
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
  "COM812",
]

[tool.bumpversion]
current_version = "2.2.4"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
