[wheel]
python-tag = py3

[metadata]
name = peewee-aio
version = attr: peewee_aio.__version__
url = https://github.com/klen/peewee-aio
description = Peewee support for async frameworks (Asyncio, Trio)
long_description = file: README.md
long_description_content_type = text/markdown
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = peewee, asyncio, trio, asgi
project_urls = 
    Documentation = https://github.com/klen/peewee-aio
    Source code = https://github.com/klen/peewee-aio
    Issue tracker = https://github.com/klen/peewee-aio/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: AsyncIO
    Framework :: Trio

[options]
packages = peewee_aio,
python_requires = >=3.7
install_requires = 
    peewee > 3
    aio-databases >= 0.3.0

[options.package_data]
peewee_aio = 
    py.typed

[options.extras_require]
postgresql =
    aio-databases[aiopg]
mysql =
    aio-databases[aiomysql]
sqlite =
    aio-databases[aiosqlite]
tests = 
    aio-databases[aiopg,aiomysql,aiosqlite]
    pytest
    pytest-aio
    pytest-mypy

[tool:pytest]
addopts = -xsv --mypy
log_cli = True

[mypy]
ignore_missing_imports = True

[pylama]
ignore = D

[pylama:tests.py]
ignore = D

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
    pytest tests
